# desk-sect

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  c_cpp_properties.json  customizeButton.cpp  customizeButton.h  launch.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  styles.qss  tasks.json
